# TonyPi_REU2021_SU

./: README.md
GaitPatterns/: gait.csv  gait25.csv  gait5.csv  gait75.csv  standingGait.csv
Matlab/: GaitPatternGenerationTest.m  anglesToPulse.m  color.m  definePOI.m  gaitGeneration.m  smoothIntervals.m  speedCalc.m
TonyPi/: ActionGroupDict.py  Camera.py  Joystick.py  LABConfig.py  RPCServer.py  TonyPi.py
TonyPi/CameraCalibration/: CalibrationConfig.py  __init__.py
TonyPi/Functions/: ApriltagDetect.py  ColorDetect.py  ColorTrack.py  FaceDetect.py  KickBall.py  RemoteControl.py  Running.py  VisualPatrol.py
TonyPi/models/: deploy.prototxt
TonyPi_ws/: frames.gv  visualize.sh
TonyPi_ws/devel/: .catkin  .rosinstall  local_setup.sh
TonyPi_ws/devel/include/TonyPi/: Debug.h
TonyPi_ws/devel/lib/TonyPi/: state_publisher
TonyPi_ws/devel/lib/pkgconfig/: TonyPi.pc  r2d2.pc  robot_setup_tf.pc
TonyPi_ws/devel/lib/r2d2/: state_publisher
TonyPi_ws/devel/lib/robot_setup_tf/: tf_listener
TonyPi_ws/devel/share/TonyPi/cmake/: TonyPi-msg-extras.cmake  TonyPi-msg-paths.cmake  TonyPiConfig.cmake
TonyPi_ws/devel/share/r2d2/cmake/: r2d2Config.cmake
TonyPi_ws/devel/share/robot_setup_tf/cmake/: robot_setup_tfConfig.cmake
TonyPi_ws/src/TonyPi/: CMakeLists.txt  display.launch  model.xml
TonyPi_ws/src/TonyPi/msg/: Debug.msg
TonyPi_ws/src/TonyPi/src/: TonyPi.rviz  gait.csv  state_publisher.cpp  state_publisher.cpp.save  state_publisher.cpp.save.1  testGait  testGait.cpp
TonyPi_ws/src/robot_setup_tf/: CMakeLists.txt  package.xml
(+9 files in other folders)
